k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: ghcr.io/kimsukhwan/msa-k3s-lab-order-service:5fdb4960d605c9336cf0b58ef39a76132afd874e
          imagePullPolicy: Always
          ports:
            - containerPort: 8092
          readinessProbe:
            httpGet:
              path: /orders/health
              port: 8092
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /orders/health
              port: 8092
            initialDelaySeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8092
      targetPort: 8092
