k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: ghcr.io/kimsukhwan/msa-k3s-lab-product-service:19611c266901b12119221cce77dc5c0ca8cc6b23
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
          readinessProbe:
            httpGet:
              path: /health
              port: 8091
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8091
            initialDelaySeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - port: 8091
      targetPort: 8091
